Fix: stope tile-info overflowing container

--- a/_sass/_base/_typography.scss
+++ b/_sass/_base/_typography.scss
@@ -58,6 +58,12 @@ a {
 	color: $muted_text_color;
 }
 
+@media screen and (max-width: 400px) {
+	.tile-description {
+		font-size: 14px;
+	}
+}
+
 .sidebar-selector-heading {
 	text-transform: uppercase;
 	font-weight: $normal;
