--- a/_sass/_components/_tile.scss
+++ b/_sass/_components/_tile.scss
@@ -51,7 +51,7 @@
 .tile-info {
 	position: absolute;
 	width: 40%;
-	height: 40%;
+	min-height: 40%;
 	background-color: white;
 	opacity: 1;
 	padding: 12px 20px 13px 20px;
